--- a/dashboard/templates/dashboard/pages/blog-comment-and-reply/comment-reply-list.html
+++ b/dashboard/templates/dashboard/pages/blog-comment-and-reply/comment-reply-list.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <!-- Card header -->
                 <div class="card-header border-0 text-center">
-                    <h3 class="mb-0">News Comment Replies</h3>
+                    <h3 class="mb-0">Blog Comment Replies</h3>
                 </div>
                 <!-- Light table -->
                 <div class="table-responsive">
@@ -40,7 +40,7 @@
                             <tr class="text-center">
                                 <th>Action</th>
                                 <th>#</th>
-                                <th>News</th>
+                                <th>Blog</th>
                                 <th>Comment</th>
                                 <th>Replied By</th>
                                 <th>Reply</th>
@@ -73,7 +73,7 @@
                                     {{ forloop.counter }}
                                 </th>
 
-                                <td>{{ object.comment.news.title|truncate_word:30|remove_html_tags }}</td>
+                                <td>{{ object.comment.blog.title|truncate_word:30|remove_html_tags }}</td>
                                 <td>
                                     <a href="#" class="js_view_btn" data-toggle="modal" data-target="#modal-view-details" data-value="{{ object.comment.comment }}">
                                         <span class="{% if object.comment.is_approved == True %}text-success{% else %}text-danger{% endif %}">
@@ -101,7 +101,7 @@
                             <tr class="text-center">
                                 <th>Action</th>
                                 <th>#</th>
-                                <th>News</th>
+                                <th>Blog</th>
                                 <th>Comment</th>
                                 <th>Replied By</th>
                                 <th>Reply</th>
@@ -119,7 +119,7 @@
     </div>
 </div>
 
-{% include "dashboard/pages/comment-and-reply/view-details-modal.html" %}
+{% include "dashboard/pages/blog-comment-and-reply/view-details-modal.html" %}
 
 {% if not delete_url == None %}
 {% include 'dashboard/snippets/delete-modal.html' %}
@@ -138,7 +138,7 @@
         // console.log(objectID, "*** ID ***")
 
         $.ajax({
-            url: '{% url "dashboard:change_comment_reply_status" %}',
+            url: '{% url "dashboard:change_blog_comment_reply_status" %}',
             data: {
                 objID: objectID,
             },
