--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="banner-bottom">
                 <div class="container">
-                    <div class="row">
+                    <div class="row" style="padding-top:10%;">
                         <div class="col-4 col-md-3">
                             <div class="banner-item">
                                 <img src="{% static './assets/landing/assets/img/civil-eng.png' %}" alt="">
