--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -115,9 +115,9 @@
     <!-- Journey Start -->
     <div class="journey-area py-5 bg-gray section-title-2">
         <div class="container">
-            <h3 class="text-center text-uppercase fw-bold"><span>auspicious</span> journey</h3>
+<!--            <h3 class="text-center text-uppercase fw-bold"><span>auspicious</span> journey</h3>-->
             <div class="text-center">
-                <img src="{% static 'assets/landing/assets/img/journey.png' %}" alt="" class="img-fluid">
+                <img src="{% static 'assets/landing/assets/img/AuspiciousJourney.jpg' %}" alt="" class="img-fluid">
             </div>
         </div>
     </div>
